# karto_spa_fixed

./: .ycm_extra_conf.py  READ.md  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: open_karto.pc  slam_karto.pc  sparse_bundle_adjustment.pc
devel/lib/slam_karto/: slam_karto
devel/share/open_karto/cmake/: open_kartoConfig.cmake
devel/share/slam_karto/cmake/: slam_kartoConfig.cmake
devel/share/sparse_bundle_adjustment/cmake/: sparse_bundle_adjustmentConfig.cmake
src/open_karto/src/: Karto.cpp
src/slam_karto/: CMakeLists.txt
src/slam_karto/config/: mapper_params.yaml
src/slam_karto/launch/: build_map_w_params.launch
src/slam_karto/src/: SpaSolver.cpp  slam_karto.cpp
src/sparse_bundle_adjustment/: CMakeLists.txt
